se agregaron activity DIRECCIONIP y PREFIJO

--- a/SubnettingApp/app/src/main/res/values/strings.xml
+++ b/SubnettingApp/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
         Aplicación en desarrollo
 
     </string>
+    <string name="title_activity_subneteo_ip">Subneteo</string>
+    <string name="title_activity_subneteo_prefijo">Subneteo</string>
 </resources>
