--- a/SubnettingApp/app/src/main/res/values/strings.xml
+++ b/SubnettingApp/app/src/main/res/values/strings.xml
@@ -61,19 +61,20 @@
         Si nuestro servicio te resulta interesante, y crees que te podemos ayudar, No dudes en contactarnos.
         \n\n
         <b>Correo Electrónico:</b>\n
-        <a href = "contacto@telumsoft.com"><u>contacto@telumsoft.com</u></a>
+        <a href="contacto@telumsoft.com"><u>contacto@telumsoft.com</u></a>
         \n\n
         <b>Youtube:</b>\n
-        <a href = "www.youtube.com/telumsoft1"><u>www.youtube.com/telumsoft1</u></a>
+        <a href="www.youtube.com/telumsoft1"><u>www.youtube.com/telumsoft1</u></a>
         \n\n
         <b>Facebook:</b>\n
-        <a href = "https://www.facebook.com/telumsoft"><u>https://www.facebook.com/telumsoft</u></a>
+        <a href="https://www.facebook.com/telumsoft"><u>https://www.facebook.com/telumsoft</u></a>
         \n\n
         <b>Twitter:</b>\n
-        <a href = "https://twitter.com/telumsoft"><u>https://twitter.com/telumsoft</u></a>
+        <a href="https://twitter.com/telumsoft"><u>https://twitter.com/telumsoft</u></a>
         \n\n
         <b>Página:</b>\n
-        <a href = "http://www.telumsoft.com/"><u>http://www.telumsoft.com/</u></a>
+        <a href="http://www.telumsoft.com/"><u>http://www.telumsoft.com/</u></a>
     </string>
+    <string name="title_activity_subneteo">Resultado subneteo</string>
 
 </resources>
